# printshopmgr

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
accounts/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_line_display_name.py
accounts/tests/: test_models.py
config/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
customers/: admin.py  forms.py  models.py  urls.py  views.py
customers/migrations/: 0001_initial.py
dashboard/: admin.py  models.py  urls.py  views.py
dashboard/templatetags/: thai_filters.py
dashboard/tests/: test_thai_filters.py
docker/: entrypoint.sh
docs/: 01-walkin-new-order.md  02-design-approval-production.md  03-pickup-final-payment.md  04-corporate-monthly-billing.md  05-line-order-remote.md  06-owner-daily-operations.md  PRD-print-shop-system.md  user-journey-print-shop.md
documents/: admin.py  models.py  urls.py  views.py
documents/migrations/: 0001_initial.py  0002_initial.py
documents/tests/: test_sequential_numbering.py
fixtures/: initial_data.json
jobs/: admin.py  forms.py  models.py  urls.py  views.py
jobs/migrations/: 0001_initial.py  0002_initial.py  0003_phase2_changes.py
notifications/: admin.py  context_processors.py  models.py  service.py  tasks.py  urls.py  views.py
payments/: admin.py  models.py  urls.py  views.py
production/: admin.py  models.py  urls.py  views.py
public/: admin.py  models.py  urls.py  views.py
templates/: base.html
(+37 files in other folders)
